infra/votes-ai/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votes-ai
  name: votes-ai
spec:
  type: ClusterIP
  selector:
    app: votes-ai
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
