infra/votes-ai/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votes-ai
  labels:
    app: votes-ai
spec:
  ingressClassName: nginx
  rules:
    - host: votes-ai.${var.hostname}
      http:
        paths:
          - backend:
              service:
                name: votes-ai
                port:
                  number: 80
            path: /
            pathType: Prefix
